# airflow_api_twitter

./: .gitignore  pyproject.toml
airflow_pipeline/: standalone_admin_password.txt
airflow_pipeline/dags/: twitter_dag.py
airflow_pipeline/hook/: twitter_hook.py
airflow_pipeline/operators/: twitter_operator.py
datalake/twitter_airflow/extract_date=2023-01-07/: airflow_20230107.json
datalake/twitter_pyspark/extract_date=2023-01-05/: pyspark_20230105.json
datalake/twitter_pyspark/extract_date=2023-01-06/: pyspark_20230106.json
src/: extracao_api_twitter.py
